# RSDKv5-Decompilation

./: CMakeLists.txt
RSDKv5/: main.cpp
RSDKv5/RSDK/Core/: Link.hpp  Reader.cpp  Reader.hpp  RetroEngine.hpp
RSDKv5/RSDK/Graphics/: Video.cpp  Video.hpp
RSDKv5/RSDK/Graphics/SDL2/: SDL2RenderDevice.cpp
RSDKv5/RSDK/Input/SDL2/: SDL2InputDevice.cpp
RSDKv5/RSDK/Scene/: Object.cpp  Scene.cpp
RSDKv5/RSDK/Storage/: Text.cpp
RSDKv5/RSDK/User/Core/: UserCore.cpp  UserStorage.cpp
